[project]
name = "ext4"
version = "1.0.4"
authors = [
  { name="Eeems", email="eeems@eeems.email" },
]
description = "Library for read only interactions with an ext4 filesystem"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dynamic = ["dependencies", "readme"]

[tool.setuptools]
packages = [
    "ext4",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file= ["README.md"], content-type = "text/markdown"}

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
