[project]
name = "ext4"
version = "1.3"
authors = [
  { name="Eeems", email="eeems@eeems.email" },
]
description = "Library for read only interactions with an ext4 filesystem"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dynamic = ["readme"]
dependencies = [
    "cachetools==6.0.0",
    "crcmod==1.7",
    "typing-extensions==4.15.0; python_version<\"3.12\"",
]

[project.optional-dependencies]
dev = [
    'wheel',
    'build',
    'ruff',
    'basedpyright',
]
test = [
    "pytest",
]
fuzz = [
    "atheris",
]

[project.urls]
Homepage = "https://github.com/Eeems/python-ext4"
Repository = "https://github.com/Eeems/python-ext4.git"
Issues = "https://github.com/Eeems/python-ext4/issues"

[tool.setuptools]
packages = [
    "ext4",
]

[tool.setuptools.dynamic]
readme = {file= ["README.md"], content-type = "text/markdown"}

[build-system]
requires = ["setuptools >= 77.0.3", "nuitka>=4.0.6"]
build-backend = "nuitka.distutils.Build"

[tool.ruff]
exclude = [".venv", "build"]

[tool.ruff.lint]
extend-select = [
    "UP",
    "PL",
    "ANN",
    "S",
]
ignore = [
    "PLW0603",
    "PLR2004",
    "PLR0915",
    "PLR0912",
    "PLR0911",
    "PLR6301",
    "PLR0913",
    "S101",
    "S404",
    "S603",
    "S607",
    "ANN401",
    "ANN001",
    "ANN003",
]

[tool.pyright]
exclude = [".venv", "build"]
reportMissingTypeStubs = false
reportImportCycles = false
